--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "811-landing-page",
   "version": "1.0.0",
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
